@@ -1,3 +1,7 @@
+2010-02-06  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-bzr.el (vc-bzr-dir-extra-headers): Disable the pending merges header.
+
 2010-02-05  Juri Linkov  <juri@jurta.org>
 
 	* doc-view.el (doc-view-mode):
